@@ -1,5 +1,10 @@
 2009-11-25  Miguel de Dios <miguel.dedios@artica.es>
 
+	* operation/events/events_rss.php: fix the bug in the creation of xml.
+	Fixes: 2902134
+
+2009-11-25  Miguel de Dios <miguel.dedios@artica.es>
+
 	* operation/agentes/status_monitor.php: fix the what interval to check in
 	the monitor.
 	Fixes: 2902446
